Add JAVA_OPTS to the dockerfile